# prometheus-grpc-proxy

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
examples/: server.rs
protos/prometheus/: prometheus.proto
src/: main.rs
