[package]
name = "prometheus-grpc-proxy"
description = "A Prometheus HTTP server used to provide Prometheus scraping support to gRPC-only services."
version = "0.1.0"
edition = "2021"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sunsided/prometheus-grpc-proxy"

[[example]]
name = "server"
path = "examples/server.rs"

[dependencies]
actix-web = { version = "4.2.1", default-features = false, features = ["macros", "actix-macros", "compress-zstd", "compress-brotli", "compress-gzip", "actix-web-codegen"] }
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["env"] }
dotenv = "0.15.0"
prost = "0.11.2"
tonic = { version = "0.8.2", features = ["gzip", "flate2", "tokio", "h2"] }
tracing = "0.1.37"
tracing-attributes = "0.1.23"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "parking_lot", "tracing-log", "json"] }

[build-dependencies]
tonic-build = "0.8.2"

[dev-dependencies]
lazy_static = "1.4.0"
prometheus = "0.13.3"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
